--- a/package.json
+++ b/package.json
@@ -53,8 +53,14 @@
     }
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/base": "^5.0.0-beta.58",
+    "@tanstack/react-form": "^0.29.2",
     "@vue-storefront/magento-api": "^2.4.3",
     "@vue-storefront/magento-sdk": "^2.1.0",
-    "@vue-storefront/middleware": "^3.8.0"
+    "@vue-storefront/middleware": "^3.8.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.27.0"
   }
 }
