--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@vue-storefront/magento-api": "^2.4.3",
     "@vue-storefront/magento-sdk": "^2.1.0",
     "@vue-storefront/middleware": "^3.8.0",
+    "cors": "^2.8.5",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.27.0"
   }
