--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/base": "^5.0.0-beta.58",
+    "@mui/icons-material": "^6.1.5",
     "@tanstack/react-form": "^0.29.2",
     "@vue-storefront/magento-api": "^2.4.3",
     "@vue-storefront/magento-sdk": "^2.1.0",
