--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
     "consola": "^2.15.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "puppeteer": "^24.27.0",
     "nodemon": "^2.0.19",
     "ts-node-dev": "^2.0.0"
   },
