--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@storefront-ui/react": "~2.2.0",
     "@storefront-ui/shared": "~2.2.0",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
     "@tanstack/react-query": "^4.29.5",
     "@vue-storefront/next": "~1.0.0",
     "@vue-storefront/sdk": "~1.0.1",
@@ -31,6 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
+    "react-image-crop": "^11.0.10",
     "react-transition-group": "^4.4.5",
     "sharp": "^0.32.1"
   },
