--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,12 +17,12 @@
   "dependencies": {
     "@storefront-ui/react": "~2.2.0",
     "@storefront-ui/shared": "~2.2.0",
-    "@zxing/browser": "^0.1.5",
-    "@zxing/library": "^0.21.3",
     "@tanstack/react-query": "^4.29.5",
     "@vue-storefront/next": "~1.0.0",
     "@vue-storefront/sdk": "~1.0.1",
     "@vue-storefront/storefront-boilerplate-sdk": "~0.1.0",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
     "classnames": "^2.3.2",
     "cross-env": "^7.0.3",
     "i18next": "^22.4.15",
@@ -35,7 +35,8 @@
     "react-i18next": "^12.2.2",
     "react-image-crop": "^11.0.10",
     "react-transition-group": "^4.4.5",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "tesseract.js": "^7.0.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.1.1",
@@ -54,12 +55,12 @@
     "@vue-storefront/unified-data-model": "~0.1.0",
     "autoprefixer": "^10.4.14",
     "eslint-config-next": "^13.3.0",
+    "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.2.2",
     "postcss": "^8.4.23",
     "sass": "^1.62.0",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.0.3",
     "tailwindcss": "^3.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "5.0.4"
   }
 }
